[gd_scene load_steps=2 format=3 uid="uid://bwq7x8vh8rkna"]

[ext_resource type="Script" path="res://scenes/GameComplete.gd" id="1_7y9kx"]

[node name="GameComplete" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7y9kx")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "¡FELICIDADES!"
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Has completado todos los minijuegos"
horizontal_alignment = 1

[node name="StatsContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="FinalScoreLabel" type="Label" parent="VBoxContainer/StatsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Puntuación Final: 0"
horizontal_alignment = 1

[node name="GamesWonLabel" type="Label" parent="VBoxContainer/StatsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Minijuegos completados: 0"
horizontal_alignment = 1

[node name="WinRateLabel" type="Label" parent="VBoxContainer/StatsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Tasa de victoria: 0%"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
modulate = Color(1, 1, 1, 0.3)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1
theme_override_constants/separation = 30

[node name="PlayAgainButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(150, 50)
theme_override_font_sizes/font_size = 20
text = "Jugar de Nuevo"

[node name="MenuButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(150, 50)
theme_override_font_sizes/font_size = 20
text = "Menú Principal"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/PlayAgainButton" to="." method="_on_play_again_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/MenuButton" to="." method="_on_menu_button_pressed"]